github link in html

--- a/Homework 1 report.html
+++ b/Homework 1 report.html
@@ -14581,6 +14581,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Homework-1-Report-CPSC-8430">Homework 1 Report CPSC 8430<a class="anchor-link" href="#Homework-1-Report-CPSC-8430">&#182;</a></h1><p>Andrew Wright</p>
+<p>GitHub Link: <a href="https://github.com/andrewright17/Homework-1-Deep-Learning">https://github.com/andrewright17/Homework-1-Deep-Learning</a></p>
 
 </div>
 </div>
